--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <i class="fas fa-graduation-cap"> </i>
    </div>
    <div class="info">
-      <h3>articles</h3>
+      <h3>thesis</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing 
          elit. 
        </p>
@@ -108,7 +108,7 @@
       <i class="fas fa-graduation-cap"> </i>
    </div>
    <div class="info">
-      <h3>Script Writing</h3>
+      <h3>articles</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing 
          elit. 
        </p>
@@ -122,7 +122,7 @@
       <i class="fas fa-video"> </i>
    </div>
    <div class="info">
-      <h3>Script Writing</h3>
+      <h3>Reports</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing 
          elit. 
        </p>
@@ -148,9 +148,9 @@
          </div>
 
       </div>
-   </div>
+   
 <!--  -->
-<div class="content">
+
    <div class="project-card"> 
       <div class="project-image">
          <img src="./img/student.png" alt="">
@@ -164,10 +164,10 @@
       </div>
 
    </div>
-</div>
+
 <!--  -->
 
-<div class="content">
+
    <div class="project-card"> 
       <div class="project-image">
          <img src="./img/student1.jpg" alt="">
@@ -181,9 +181,9 @@
       </div>
 
    </div>
-</div>
+
 <!--  -->
-<div class="content">
+
    <div class="project-card"> 
       <div class="project-image">
          <img src="./img/student.jpg" alt="">
@@ -199,8 +199,54 @@
    </div>
 </div>
 
+</section> 
 
+
+
+<section class="cards contact" id="contact">
+   <h2 class="title"> Let,s work together  </h2> 
+
+   <div class="content">
+      <div class="card">
+         <div class="icon">
+            <i class="fas fa-phone"> </i>
+         </div>
+         <div class="info">
+            <h3> phone </h3>
+            <p>01020219255 
+             </p>
+         </div>
+      </div>
+<!--  -->
+<div class="card">
+<div class="icon">
+   <i class="fas fa-envelope"> </i>
+</div>
+<div class="info">
+   <h3> Email </h3>
+   <p>nasraesmail708@gmail.com
+    </p>
+</div>
+</div>
+</div>
 </section>
+
+<footer class="footer">
+   <p class="footer-title">copyrights @ <span>Nasra Ismail</span></p>
+   
+
+   <div class="social-icons">
+      <a href="#" class=""><i class="fab fa-youtube"> </i> </a>
+      <a href="#" class=""><i class="fab fa-facebook"> </i> </a>
+      <a href="#" class=""><i class="fab fa-twitter"> </i> </a>
+      <a href="#" class=""><i class="fab fa-linkedin-in"> </i> </a>
+      <a href="#" class=""><i class="fab fa-whatsapp"> </i> </a>
+      <a href="#" class=""><i class="fab fa-github"> </i> </a>
+
+     
+   </div>
+</footer>
+
 
 
 
